[package]
name = "lewton-wiki-tool"
version = "0.1.0"
authors = ["est31 <MTest31@outlook.com>"]
license = "MIT/Apache-2.0"
readme = "README.md"

[dependencies]
# lewton related
cmp = { git = "https://github.com/RustAudio/lewton/" }
crossbeam-channel = "0.3"
serde_json = "1.0"
serde = "1.0"
serde_derive = "1.0"

# Downloading stuff
hyper = "0.12"
hyper-tls = "0.3"
openssl = "0.10"
hyper-openssl = "0.7"
tokio = "0.1"
percent-encoding = "1.0"
md5 = "0.6"

#CLI stuff
structopt = "0.2"
structopt-derive = "0.2"
pbr = "1.0"

#Other stuff
chrono = { version = "0.4", features = ["serde"] }
